# alfwin

./: Cargo.toml  Justfile  README.md  Window And Tab Switcher.alfredworkflow
src/: alfred.rs  get_window_names.cpp  main.rs  windows.rs
src/applescript/: activate_application_window.applescript  activate_chrome_tab.applescript  activate_iterm_tab.applescript  get_chrome_tabs.applescript  get_iterm_tabs.applescript
